--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1 class="titulo">El juego de las parejas</h1>
   </header>
   <main>
+      <h2 class='contador1'></h2>
     <div class="content-formulario">
+
       <form class="formulario" action="index.html" method="post">
         <input class="radio" id="radio-1" type="radio" name="numero" value="4">4
         <input class="radio" id="radio-2" type="radio" name="numero" value="6">6
